# CarConnectivity-webui-by-m7xlab

./: .gitignore  CHANGELOG.md  CREDITS.md  DJANGO_MIGRATION.md  IMPLEMENTATION_SUMMARY.md  M7XLAB_RELEASE.md  MANIFEST.in  MCP_SETUP.md  PYPI_RELEASE.md  QUICKSTART.md  QUICK_RELEASE.txt  README.md  RELEASE_READY.md  UPLOAD_COMMANDS.txt  mcp_browser_server.py  mcp_requirements.txt  pyproject.toml  setup_requirements.txt  test_local.sh  upload_pypi.sh
src/carconnectivity_plugins/webui/: _version.py  plugin.py
src/carconnectivity_plugins/webui/django_app/: __init__.py  context_processors.py  middleware.py  settings.py  urls.py  wsgi.py
src/carconnectivity_plugins/webui/django_app/static/css/: animations.css  apple-design-system.css  components.css  responsive.css
src/carconnectivity_plugins/webui/django_app/static/icons/: README.md
src/carconnectivity_plugins/webui/django_app/static/js/: main.js
src/carconnectivity_plugins/webui/django_app/templates/: about.html  base.html  log.html  restart.html
src/carconnectivity_plugins/webui/django_app/templates/auth/: login.html
src/carconnectivity_plugins/webui/django_app/templates/components/: navbar.html
src/carconnectivity_plugins/webui/django_app/templates/connectors/: config.html  log.html  status.html
src/carconnectivity_plugins/webui/django_app/templates/garage/: garage.html  vehicle.html
src/carconnectivity_plugins/webui/django_app/templates/plugins/: config.html  log.html  status.html
src/carconnectivity_plugins/webui/django_app/templatetags/: __init__.py  carconnectivity_filters.py
src/carconnectivity_plugins/webui/django_app/views/: __init__.py  api.py  auth.py  connectors.py  garage.py  plugins.py
