[build-system]
requires = [
    "setuptools>=61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "carconnectivity-webui-by-m7xlab"
description = "CarConnectivity plugin for a modern Django-based web UI with Apple-inspired design"
version = "1.0.3"
requires-python = ">=3.9"
authors = [
    { name = "m7xlab", email = "m7xlab@gmail.com" }
]
maintainers = [
    { name = "m7xlab", email = "m7xlab@gmail.com" }
]
dependencies = [
    "carconnectivity[images]>=0.11.6",
    "Django~=5.0",
    "pypng~=0.20220715.0"
]
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Topic :: System :: Monitoring",
    "Topic :: Home Automation",
    "Environment :: Web Environment"
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/m7xlab/CarConnectivity-plugin-webui"
Repository = "https://github.com/m7xlab/CarConnectivity-plugin-webui"
Issues = "https://github.com/m7xlab/CarConnectivity-plugin-webui/issues"
Documentation = "https://github.com/m7xlab/CarConnectivity-plugin-webui/blob/main/README.md"

[project.scripts]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"carconnectivity_plugins.webui.django_app" = [
    "templates/**/*.html",
    "static/**/*",
    "static/css/*.css",
    "static/js/*.js",
    "static/icons/*.svg",
    "static/icons/*.png",
]

[tool.pylint.format]
max-line-length = 160
ignore-patterns= "_version.py"

[tool.bandit]
targets = "carconnectivity_webui, carconnectivity_plugins"